--- a/Pear/Controllers/Create Profile Flow/Interests Input/GetStartedInterestsViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Interests Input/GetStartedInterestsViewController.storyboard
@@ -89,7 +89,7 @@
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vMg-gj-zsR" userLabel="Progress View">
                                         <rect key="frame" x="0.0" y="49" width="0.0" height="1"/>
-                                        <color key="backgroundColor" red="0.26274509800000001" green="0.29411764709999999" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" red="0.1215686275" green="0.83137254900000002" blue="0.68627450980000004" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" id="8st-yh-hPE"/>
                                             <constraint firstAttribute="height" constant="1" id="ok6-sJ-RuO"/>
@@ -146,7 +146,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="onboarding-back-button" width="120" height="120"/>
+        <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
         <image name="onboarding-close-button" width="120" height="120"/>
         <image name="onboarding-icon-interests" width="128" height="128"/>
     </resources>
