--- a/Pear/Controllers/Update User/Update Images/UpdateImagesViewController.storyboard
+++ b/Pear/Controllers/Update User/Update Images/UpdateImagesViewController.storyboard
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Un4-vy-CSh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Update Images View Controller-->
         <scene sceneID="3BZ-Uy-ggj">
             <objects>
-                <viewController id="Un4-vy-CSh" sceneMemberID="viewController">
+                <viewController id="Un4-vy-CSh" customClass="UpdateImagesViewController" customModule="Pear" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QDq-tb-p2i"/>
+                        <viewControllerLayoutGuide type="bottom" id="naP-Ep-F7J"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="fdX-wR-rUf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="35Y-mi-Xta">
-                                <rect key="frame" x="20" y="30" width="335" height="627"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="35Y-mi-Xta" secondAttribute="height" multiplier="3:2" priority="900" id="avr-xI-YDI"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="4" minimumInteritemSpacing="4" id="ANe-ZQ-2ic">
-                                    <size key="itemSize" width="97" height="97"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="ANe-ZQ-2ic">
+                                    <size key="itemSize" width="120" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageUploadCollectionViewCell" id="MZi-or-BVD" customClass="ImageUploadCollectionViewCell" customModule="Pear" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="97" height="97"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="97" height="97"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Adn-AF-hd2">
-                                                    <rect key="frame" x="0.0" y="0.0" width="97" height="97"/>
+                                                    <rect key="frame" x="10" y="10" width="77" height="77"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FjA-mp-edn">
                                                     <rect key="frame" x="71" y="2" width="24" height="24"/>
@@ -55,12 +58,12 @@
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="Adn-AF-hd2" firstAttribute="width" secondItem="MZi-or-BVD" secondAttribute="width" id="YPA-8p-05S"/>
-                                            <constraint firstItem="Adn-AF-hd2" firstAttribute="centerX" secondItem="MZi-or-BVD" secondAttribute="centerX" id="eiq-zc-jbJ"/>
-                                            <constraint firstItem="Adn-AF-hd2" firstAttribute="height" secondItem="MZi-or-BVD" secondAttribute="height" id="etZ-Pl-qAJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="Adn-AF-hd2" secondAttribute="trailing" constant="10" id="9Yz-8G-rmb"/>
+                                            <constraint firstAttribute="bottom" secondItem="Adn-AF-hd2" secondAttribute="bottom" constant="10" id="YBc-ho-oik"/>
                                             <constraint firstAttribute="trailing" secondItem="FjA-mp-edn" secondAttribute="trailing" constant="2" id="fiU-7S-22b"/>
-                                            <constraint firstItem="Adn-AF-hd2" firstAttribute="centerY" secondItem="MZi-or-BVD" secondAttribute="centerY" id="q8x-9S-Djg"/>
+                                            <constraint firstItem="Adn-AF-hd2" firstAttribute="leading" secondItem="MZi-or-BVD" secondAttribute="leading" constant="10" id="skC-lM-Baf"/>
                                             <constraint firstItem="FjA-mp-edn" firstAttribute="top" secondItem="MZi-or-BVD" secondAttribute="top" constant="2" id="vrP-wd-L0y"/>
+                                            <constraint firstItem="Adn-AF-hd2" firstAttribute="top" secondItem="MZi-or-BVD" secondAttribute="top" constant="10" id="zYH-VT-Ojb"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="cancelButton" destination="FjA-mp-edn" id="8Kr-ZJ-rdG"/>
@@ -68,22 +71,22 @@
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageUploadAddCollectionViewCell" id="CkP-iO-CdF" customClass="ImageUploadAddCollectionViewCell" customModule="Pear" customModuleProvider="target">
-                                        <rect key="frame" x="119" y="0.0" width="97" height="97"/>
+                                        <rect key="frame" x="127.5" y="0.0" width="120" height="120"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="97" height="97"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-add-image-dotted-rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="OLq-Tw-DQH">
-                                                    <rect key="frame" x="0.0" y="0.0" width="97" height="97"/>
+                                                    <rect key="frame" x="10" y="10" width="77" height="77"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="OLq-Tw-DQH" firstAttribute="width" secondItem="CkP-iO-CdF" secondAttribute="width" id="JLa-5W-qTK"/>
-                                            <constraint firstItem="OLq-Tw-DQH" firstAttribute="height" secondItem="CkP-iO-CdF" secondAttribute="height" id="OMV-dL-fmC"/>
-                                            <constraint firstItem="OLq-Tw-DQH" firstAttribute="centerY" secondItem="CkP-iO-CdF" secondAttribute="centerY" id="oJr-tO-z4d"/>
-                                            <constraint firstItem="OLq-Tw-DQH" firstAttribute="centerX" secondItem="CkP-iO-CdF" secondAttribute="centerX" id="zYA-5a-952"/>
+                                            <constraint firstAttribute="trailing" secondItem="OLq-Tw-DQH" secondAttribute="trailing" constant="10" id="2b5-S7-7H6"/>
+                                            <constraint firstAttribute="bottom" secondItem="OLq-Tw-DQH" secondAttribute="bottom" constant="10" id="5py-lM-zFd"/>
+                                            <constraint firstItem="OLq-Tw-DQH" firstAttribute="leading" secondItem="CkP-iO-CdF" secondAttribute="leading" constant="10" id="bsX-8G-dkF"/>
+                                            <constraint firstItem="OLq-Tw-DQH" firstAttribute="top" secondItem="CkP-iO-CdF" secondAttribute="top" constant="10" id="caQ-50-3kx"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="OLq-Tw-DQH" id="w7j-OF-Zw7"/>
@@ -94,20 +97,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="m3h-Sj-1Np" firstAttribute="bottom" secondItem="35Y-mi-Xta" secondAttribute="bottom" constant="10" id="2k9-W7-7ZM"/>
-                            <constraint firstItem="35Y-mi-Xta" firstAttribute="leading" secondItem="m3h-Sj-1Np" secondAttribute="leading" constant="20" id="2sh-2N-Xgq"/>
-                            <constraint firstItem="35Y-mi-Xta" firstAttribute="centerY" secondItem="m3h-Sj-1Np" secondAttribute="centerY" id="8TY-bg-4J8"/>
-                            <constraint firstItem="35Y-mi-Xta" firstAttribute="centerX" secondItem="m3h-Sj-1Np" secondAttribute="centerX" id="HbM-6K-ZXE"/>
-                            <constraint firstItem="35Y-mi-Xta" firstAttribute="top" secondItem="m3h-Sj-1Np" secondAttribute="top" constant="10" id="K1M-Ff-hKF"/>
-                            <constraint firstItem="m3h-Sj-1Np" firstAttribute="trailing" secondItem="35Y-mi-Xta" secondAttribute="trailing" constant="20" id="UYx-5r-vKZ"/>
+                            <constraint firstItem="35Y-mi-Xta" firstAttribute="leading" secondItem="fdX-wR-rUf" secondAttribute="leading" id="2sh-2N-Xgq"/>
+                            <constraint firstAttribute="trailing" secondItem="35Y-mi-Xta" secondAttribute="trailing" id="UYx-5r-vKZ"/>
+                            <constraint firstItem="35Y-mi-Xta" firstAttribute="top" secondItem="fdX-wR-rUf" secondAttribute="top" id="rbr-ey-Yy5"/>
+                            <constraint firstItem="naP-Ep-F7J" firstAttribute="top" secondItem="35Y-mi-Xta" secondAttribute="bottom" id="zjw-r1-y4k"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="m3h-Sj-1Np"/>
                     </view>
                     <size key="freeformSize" width="375" height="667"/>
+                    <connections>
+                        <outlet property="collectionView" destination="35Y-mi-Xta" id="rDH-Yp-dSs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bDD-bJ-ksr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="494" y="-185"/>
+            <point key="canvasLocation" x="493.60000000000002" y="-185.75712143928038"/>
         </scene>
     </scenes>
     <resources>
