--- a/Pear/Controllers/Update User/Update Images/UpdateImagesViewController.storyboard
+++ b/Pear/Controllers/Update User/Update Images/UpdateImagesViewController.storyboard
@@ -42,10 +42,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Adn-AF-hd2">
-                                                    <rect key="frame" x="10" y="10" width="77" height="77"/>
+                                                    <rect key="frame" x="10" y="10" width="100" height="100"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jbn-98-NL8">
+                                                    <rect key="frame" x="10" y="10" width="100" height="100"/>
+                                                    <connections>
+                                                        <action selector="cellClicked:" destination="MZi-or-BVD" eventType="touchUpInside" id="Ui9-ys-NBn"/>
+                                                    </connections>
+                                                </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FjA-mp-edn">
-                                                    <rect key="frame" x="71" y="2" width="24" height="24"/>
+                                                    <rect key="frame" x="86" y="10" width="24" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="24" id="GLL-ZY-pWw"/>
                                                         <constraint firstAttribute="height" constant="24" id="JcG-ao-i4A"/>
@@ -58,11 +64,15 @@
                                             </subviews>
                                         </view>
                                         <constraints>
+                                            <constraint firstItem="Jbn-98-NL8" firstAttribute="centerY" secondItem="Adn-AF-hd2" secondAttribute="centerY" id="4H7-6B-omF"/>
+                                            <constraint firstItem="FjA-mp-edn" firstAttribute="trailing" secondItem="Adn-AF-hd2" secondAttribute="trailing" id="7Rp-6i-zG8"/>
                                             <constraint firstAttribute="trailing" secondItem="Adn-AF-hd2" secondAttribute="trailing" constant="10" id="9Yz-8G-rmb"/>
+                                            <constraint firstItem="Jbn-98-NL8" firstAttribute="width" secondItem="Adn-AF-hd2" secondAttribute="width" id="LOY-We-rwL"/>
                                             <constraint firstAttribute="bottom" secondItem="Adn-AF-hd2" secondAttribute="bottom" constant="10" id="YBc-ho-oik"/>
-                                            <constraint firstAttribute="trailing" secondItem="FjA-mp-edn" secondAttribute="trailing" constant="2" id="fiU-7S-22b"/>
+                                            <constraint firstItem="FjA-mp-edn" firstAttribute="top" secondItem="Adn-AF-hd2" secondAttribute="top" id="aUf-be-RVt"/>
+                                            <constraint firstItem="Jbn-98-NL8" firstAttribute="height" secondItem="Adn-AF-hd2" secondAttribute="height" id="aX9-P1-mMy"/>
+                                            <constraint firstItem="Jbn-98-NL8" firstAttribute="centerX" secondItem="Adn-AF-hd2" secondAttribute="centerX" id="fHe-EE-9Jv"/>
                                             <constraint firstItem="Adn-AF-hd2" firstAttribute="leading" secondItem="MZi-or-BVD" secondAttribute="leading" constant="10" id="skC-lM-Baf"/>
-                                            <constraint firstItem="FjA-mp-edn" firstAttribute="top" secondItem="MZi-or-BVD" secondAttribute="top" constant="2" id="vrP-wd-L0y"/>
                                             <constraint firstItem="Adn-AF-hd2" firstAttribute="top" secondItem="MZi-or-BVD" secondAttribute="top" constant="10" id="zYH-VT-Ojb"/>
                                         </constraints>
                                         <connections>
@@ -78,15 +88,25 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-add-image-dotted-rectangle" translatesAutoresizingMaskIntoConstraints="NO" id="OLq-Tw-DQH">
-                                                    <rect key="frame" x="10" y="10" width="77" height="77"/>
+                                                    <rect key="frame" x="10" y="10" width="100" height="100"/>
                                                 </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gh9-6R-Xbp">
+                                                    <rect key="frame" x="10" y="10" width="100" height="100"/>
+                                                    <connections>
+                                                        <action selector="cellClicked:" destination="CkP-iO-CdF" eventType="touchUpInside" id="EtZ-V2-Q5O"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </view>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="OLq-Tw-DQH" secondAttribute="trailing" constant="10" id="2b5-S7-7H6"/>
                                             <constraint firstAttribute="bottom" secondItem="OLq-Tw-DQH" secondAttribute="bottom" constant="10" id="5py-lM-zFd"/>
+                                            <constraint firstItem="Gh9-6R-Xbp" firstAttribute="centerX" secondItem="OLq-Tw-DQH" secondAttribute="centerX" id="DtU-xF-DQg"/>
+                                            <constraint firstItem="Gh9-6R-Xbp" firstAttribute="width" secondItem="OLq-Tw-DQH" secondAttribute="width" id="WQh-Qq-8r0"/>
                                             <constraint firstItem="OLq-Tw-DQH" firstAttribute="leading" secondItem="CkP-iO-CdF" secondAttribute="leading" constant="10" id="bsX-8G-dkF"/>
                                             <constraint firstItem="OLq-Tw-DQH" firstAttribute="top" secondItem="CkP-iO-CdF" secondAttribute="top" constant="10" id="caQ-50-3kx"/>
+                                            <constraint firstItem="Gh9-6R-Xbp" firstAttribute="height" secondItem="OLq-Tw-DQH" secondAttribute="height" id="don-ef-xjf"/>
+                                            <constraint firstItem="Gh9-6R-Xbp" firstAttribute="centerY" secondItem="OLq-Tw-DQH" secondAttribute="centerY" id="eWO-KZ-FWA"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="OLq-Tw-DQH" id="w7j-OF-Zw7"/>
