--- a/Pear/Controllers/Create Profile Flow/Preferences Input/GetStartedChoosePreferencesViewController.storyboard
+++ b/Pear/Controllers/Create Profile Flow/Preferences Input/GetStartedChoosePreferencesViewController.storyboard
@@ -90,7 +90,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="They can change this later." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9An-xr-JG1">
                                 <rect key="frame" x="20" y="124.5" width="335" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f19-dA-vkk">
@@ -111,7 +111,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="JWb-2f-Czr"/>
                                 </constraints>
-                                <state key="normal" title="Next"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="nextButtonClicked:" destination="kKf-Mw-9LH" eventType="touchUpInside" id="yjk-9f-qmc"/>
                                 </connections>
@@ -138,8 +140,11 @@
                         <viewLayoutGuide key="safeArea" id="Dzd-eP-Bnd"/>
                     </view>
                     <connections>
+                        <outlet property="nextButton" destination="tpP-6L-LjU" id="aMw-EQ-b1w"/>
                         <outlet property="progressWidthConstraint" destination="Yi6-je-Hmc" id="Cuk-q6-PqZ"/>
                         <outlet property="stackView" destination="f19-dA-vkk" id="m7I-Of-gTI"/>
+                        <outlet property="subtitleLabel" destination="9An-xr-JG1" id="3eb-6y-LcF"/>
+                        <outlet property="titleLabel" destination="RPm-YY-mOw" id="ifH-ao-T3d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Twq-mq-8Ag" userLabel="First Responder" sceneMemberID="firstResponder"/>
